feat: better history tracking
